deploy/k8s/overlays/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kamino
  labels:
    app.kubernetes.io/part-of: kamino
spec:
  hosts:
    - dev.placeholder.invalid
  gateways:
    - kamino
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api.kamino-dev.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /assets/
      retries:
        attempts: 1
        retryOn: 404,connect-failure,refused-stream,unavailable,cancelled
      route:
        - destination:
            host: web.kamino-dev.svc.cluster.local
            port:
              number: 3000
    - route:
        - destination:
            host: web.kamino-dev.svc.cluster.local
            port:
              number: 3000
